test/toplevelAnnotation2.slq

x:!ℕ := 1/2; /// error
